--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "browserslist": [
     "last 2 versions"
