--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
+    "clean": "parcel clean",
     "test": "jest"
   },
   "repository": {
@@ -20,14 +21,28 @@
   "author": "Mahin Pranave",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.13.0",
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.26.2",
+    "tw-elements": "^2.0.0"
   },
   "browserslist": [
     "last 2 versions"
