--- a/package.json
+++ b/package.json
@@ -29,19 +29,23 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "parcel": "^2.13.0",
+    "parcel": "^2.13.3",
     "postcss": "^8.4.49",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@swc/helpers": "^0.5.15",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "express": "^4.21.2",
+    "node-fetch": "^3.3.2",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^11.0.3",
     "tw-elements": "^2.0.0"
   },
   "browserslist": [
